# BabelFuzzer

./: Cargo.toml  DEPENDENCIES.md  EXPANSION_PLAN.md  LICENSE  README.md  ROADMAP.md  SOFTWARE_REVIEW.md  STATUS.md  build.rs
benches/: throughput.rs
docs/: QUIC_FUZZER_PLAN.md  QUIC_FUZZER_SUMMARY.md
examples/: grpc_test_server.rs
protos/: echo.proto
src/: core_types.rs  lib.rs  main.rs
src/detection/: classifier.rs  dedup.rs  mod.rs  monitor.rs  reproducer.rs
src/engine/: corpus.rs  coverage.rs  generator.rs  mod.rs  mutator.rs  tests.rs
src/orchestrator/: mod.rs  reporter.rs  runner.rs  scheduler.rs
src/protocols/: mod.rs  traits.rs
src/protocols/grpc/: client.rs  client_pool.rs  fuzzer.rs  mod.rs  reflection.rs
src/protocols/http3/: client.rs  fuzzer.rs  mod.rs
src/protocols/quic/: client.rs  crypto.rs  frames.rs  mod.rs
src/utils/: metrics.rs
tests/: cli_fuzz_run.rs  e2e_fuzz_find_crash.rs  grpc_server_smoke.rs  property_mutator.rs  proptest_invariants.rs
