[package]
name = "proto-fuzzer"
version = "0.1.0"
edition = "2021"
description = "Production-ready gRPC protocol fuzzer with automatic reflection-based schema discovery (HTTP/3 support planned)"
license = "MIT"
repository = "https://github.com/C4-S3/BabelFuzzer"

[lib]
name = "proto_fuzzer"
path = "src/lib.rs"

[[bin]]
name = "proto-fuzzer"
path = "src/main.rs"

[[bench]]
name = "throughput"
harness = false

[dependencies]
# Async runtime
tokio = { version = "1.48", features = ["full"] }
futures = "0.3"

# gRPC support (production ready)
tonic = "0.14"
prost = "0.14"
tonic-prost = "0.14"

# QUIC/HTTP/3 support (Phase 1 - In Progress)
# See ROADMAP.md Phase 1 and docs/QUIC_FUZZER_PLAN.md for implementation timeline
quinn = "0.11"                          # QUIC protocol implementation (RFC 9000) - ACTIVE in Phase 1.1
h3 = "0.0.8"                            # HTTP/3 frame handling (RFC 9114) - for HTTP/3 fuzzing (Phase 1.3)
rustls = { version = "0.23", features = ["ring"] }  # TLS 1.3 implementation with ring crypto - ACTIVE in Phase 1.1
rustls-native-certs = "0.8"             # Native system certificates - ACTIVE in Phase 1.1
url = "2.5"                             # URL parsing for QUIC endpoints - ACTIVE in Phase 1.1

# Common utilities
bytes = "1.11"              # Efficient byte buffer handling
arbitrary = { version = "1.4", features = ["derive"] }  # Fuzzing input generation
rand = "0.9"                # Random number generation for mutations

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# CLI and logging
clap = { version = "4.5", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1.0"              # Flexible error handling
thiserror = "2.0"           # Custom error types

# Concurrency and data structures
dashmap = "6.1"             # Concurrent hashmap for corpus management
parking_lot = "0.12"        # Faster synchronization primitives
async-trait = "0.1"         # Async traits for protocol abstraction

# Utilities
sha2 = "0.10"               # SHA256 hashing for corpus deduplication
chrono = { version = "0.4", features = ["serde"] }  # Timestamp handling
base64 = "0.22"             # Base64 encoding for crash reports

[build-dependencies]
tonic-prost-build = "0.14"  # Build-time protobuf compilation
protobuf-src = "2.1"         # Protobuf source files

[dev-dependencies]
proptest = "1.9"    # Property-based testing for fuzzing invariants
criterion = "0.7"   # Benchmarking framework for performance testing
tempfile = "3.0"    # Temporary file handling for tests
